feat(admin): support optional name field for enrollment key
